@@ -1,4 +1,4 @@
 DIST acoustid-fingerprinter-0.6.tar.gz 93897 SHA256 c0165d4210a181b2baa5e72159bf3f1a9b76398da8794305ddf8e1923ca76f32 SHA512 5b22f6d834d5ddbc5f5503ee4ff9c39a0e0931d57c055ef282d9faada02cdcab16952c4b27da5c3f1646485132c50f0e839db2fb267a6dbe2fe42462d8f77bf9 WHIRLPOOL 9cf648f6ba411d84dd387a0d5f114a2a51e88bc1f3c4521c214c0f1ad4bf3ec2d001889dd1f7351b9735d761f64badc43c56b2e212036ee09713e94cb4cd1c51
-EBUILD acoustid-fingerprinter-0.6.ebuild 480 SHA256 f0602c3891c760521e876eaf64293ab7d8474a5c80b8fe4e4a8a897cc0b8e098 SHA512 f3dcb36df294386e5761b6192f160b668f51cd16821b958bc3be1701e444b4aa7e48523ccde74c8c83d1e43625f76b3ebe22a9934756d6d52b7f908085a23373 WHIRLPOOL e741ebce44b541d31f03f47b0884b1265fa1e53f7d38e60b367cbc6d6b4da87db178e3965d4d2fdf425c223cdb5c958c4562fe1cd7170bc187779722020be95f
-MISC ChangeLog 1182 SHA256 87a80e9b6920b7aa365d87a37cb1916b95335d4bd9fe2e4e21810636c3a4473d SHA512 0a57321376a8e52934d54d490b142418bcdda3aebd4fd63c69ebc3f35bb35a83c988b1c3bd99429f45db7e19a496f7ae6c6aed3c3f78b82459fa3cd8ebd0b8ea WHIRLPOOL 437275969789d03f3b704e24515f75b1f507aeaf96b9a103c26494af3641fb1506fc090bdc40fd7192fa964cdcf3b260029ddbd13bb0e637b7927f018fe6b165
+EBUILD acoustid-fingerprinter-0.6.ebuild 529 SHA256 5e8ca301edbc607044ab2c392afa426c77b1e31f78ceb9a3f7600b3c5afb49de SHA512 b1aa6604a5bebaf20d3b290650cb3647227e864150a354d919a7969b6b38ecdfd72e63056e1be2aa9eae6231d80d938f4ef39ba0e0edfe28dfa470ef2f1428b2 WHIRLPOOL e9e884a5e82f4336fd7f5aa585591711284208251b5ff6f471c054098b731d9872e3f9fdb056310cb2ccfe73ae18ef64e45fcbcae8077adf98e9000a7c269a77
+MISC ChangeLog 1495 SHA256 81339752e03420ecf12bb451ffb62a81aa90a9b27b1aa4fce6c998e4fa5bb442 SHA512 4e18169886e1c37f9120e1f8cd3b5c5a580d8852761c13cf9cb46cea540ea5e0ac5279f3e8bc7d5645863775681659d1d3a3369bb7fdc95ac85fbceb2667e27c WHIRLPOOL b85a9bdcc2002db47f07e6817e345fc11762e12d92fb4db73d7350f1b6a7a88a136c16def5d081f4cd5e8179b23673b5c7e05b7d2302ed90413b17d54c7df741
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
