@@ -1,6 +1,16 @@
 # ChangeLog for media-sound/acoustid-fingerprinter
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Jun 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  acoustid-fingerprinter-0.6.ebuild:
+  depend on taglib, wrt #195, thanks to L29Ah for report
+  eapi 5
+  drop eutils inherit
+  https homepage (instead of http)
+  developement and sources moved to bitbucket
+  restrict mirror
+  slot depend on qtgui
 
 *acoustid-fingerprinter-0.6 (10 Mar 2013)
 
